--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
   </table>
 </div>
 
+<hr>
+<p><a href="https://github.com/johanaugustsandels/ballet">https://github.com/johanaugustsandels/ballet</a></p>
+
 <script>
   const params = new Proxy(new URLSearchParams(window.location.search), {
     get: (searchParams, prop) => searchParams.get(prop),
