--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
   }
 </style>
 
-<h1>Ballet - <a href="http://www.bamboocrypto.io">BMB</a> wallet v0.2</h1>
+<h1>Ballet - <a href="http://www.bamboocrypto.io">BMB</a> wallet v0.2.1</h1>
+
+<h3>todo list</h3>
+<ul>
+  <li><strike>get latest block</strike></li>
+  <li><strike>fetch blocks and transactions per wallet from latest to oldest</strike></li>
+  <li><strike>link transaction to explorer</strike></li>
+  <li>sending bmb to another wallet (create tx)</li>
+  <li>create a new wallet</li>
+  <li>cache blocks/transactions</li>
+</ul>
 
 <h2>block count: <span id="blockCount">-1</span></h2>
 
